chore(docs): copy over aspects
Closes #989

--- a/website/layouts/cdktf.erb
+++ b/website/layouts/cdktf.erb
@@ -62,6 +62,9 @@
           <li>
             <a href="/docs/cdktf/concepts/stacks.html">Stacks</a>
           </li> 
+          <li>
+            <a href="/docs/cdktf/concepts/aspects.html">Aspects</a>
+          </li>
         </ul>
       </li>
 
